--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,40 @@
 * {
-    font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
+
+html {
+  background-image: url("../images/background.svg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  min-height: 100vh;
+}
+
+header {
+  position: sticky;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background-color: #131515;
+  color: whitesmoke;
+}
+
+.header-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+}
+
+.header-links a {
+  color: whitesmoke;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
+.header-links a:hover {
+    text-decoration: none;
+    font-size: 1.2rem;
+    text-shadow: whitesmoke 0px 0px 15px;
+  }
