--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ header {
   padding: 1rem;
   background-color: #131515;
   color: whitesmoke;
+  font-size: 24px;
 }
 
 .header-links {
@@ -36,12 +37,12 @@ header {
 .header-links a {
   color: whitesmoke;
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 20px;
 }
 
 .header-links a:hover {
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 22px;
   text-shadow: whitesmoke 0px 0px 50px;
 }
 
@@ -82,6 +83,7 @@ figure {
 
 .hero-text h2 {
   margin-right: 2rem;
+  font-size: 2.25rem;
 }
 
 .hero-text p {
@@ -89,7 +91,60 @@ figure {
   justify-content: center;
   margin-right: 2rem;
   padding-top: 8px;
-  font-size: 16px;
+  font-size: 1.2rem;
 }
 
 /* Hero CSS End */
+
+/* Card CSS */
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #131515;
+  color: whitesmoke;
+  border-radius: 15px;
+  margin: 1rem;
+  padding: 1rem;
+  width: 25%;
+  height: auto;
+  border-color: whitesmoke;
+  border-style: ridge;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+}
+
+/* Card CSS End */
+
+/* About-me CSS */
+
+.about-me-title {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  color: whitesmoke;
+  font-size: 1.5rem;
+  font-weight: bolder;
+}
+
+.about-me-text {
+  margin: 1rem;
+  color: whitesmoke;
+  align-items: center;
+  font-size: .8rem;
+  line-height: 1.5rem;
+}
+
+.about-me-img {
+  flex-shrink: 0;
+  border-radius: 10px;
+  border: solid 2px whitesmoke;
+  max-width: 100%;
+  height: auto;
+}
