--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,14 +110,12 @@ figure {
   align-items: center;
   flex-direction: column;
   background-color: #131515;
-  color: whitesmoke;
   border-radius: 15px;
   margin: 1rem;
   padding: 1rem;
   width: 25%;
   height: auto;
-  border-color: whitesmoke;
-  border-style: ridge;
+  border: solid 2px #131515;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
 }
 
