--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 
 * {
   font-family: "Lato", sans-serif;
+  text-align: center;
 }
 
 html {
@@ -68,7 +69,8 @@ figure {
 }
 
 .profile-img {
-  width: 150px;
+  display: block;
+  width: 100px;
   height: auto;
   border-radius: 15px;
   border: solid 2px #131515;
@@ -100,20 +102,20 @@ figure {
 
 .card-container {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
 .card {
-  display: flex;
+  display: block;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   background-color: #131515;
   border-radius: 15px;
   margin: 1rem;
   padding: 1rem;
-  width: 25%;
+  width: 33%;
   height: auto;
   border: solid 2px #131515;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
@@ -129,6 +131,7 @@ figure {
   color: whitesmoke;
   font-size: 1.5rem;
   font-weight: bolder;
+  text-align: center;
 }
 
 .about-me-text {
@@ -145,4 +148,58 @@ figure {
   border: solid 2px whitesmoke;
   max-width: 100%;
   height: auto;
+}
+
+/* media queries */
+
+@media screen and (max-width: 768px) {
+  
+  header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    font-size: 16px;
+    z-index: 999;
+  }
+
+  .header-links {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .header-links a {
+    color: whitesmoke;
+    text-decoration: none;
+    font-size: 16px;
+  }
+  
+  .header-links a:hover {
+    text-decoration: none;
+    font-size: 18px;
+  }
+
+  .hero {
+    padding-top: 121px;/
+  }
+
+  .hero-text h2 {
+    font-size: 20px;
+  }
+  
+  .hero-text p {
+    font-size: 12px;
+  }
+
+  .profile-img {
+    display: flex;
+    width: 100px;
+    border-radius: 15px;
+    border: solid 2px #131515;
+  }
+
+  .card {
+    width: 100%;
+  }
+
 }
